<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="#7F4FC3F7"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp"
    android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            android:gravity="center"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#C10528"/>

            <EditText
                android:id="@+id/etNewPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/enter_new_password"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/confirm_password"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:textColor="#8E5828"
                android:textSize="25sp"
                android:backgroundTint="#E9B18A"
                app:cornerRadius="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>