<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="#26C6DA"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/alertTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/privacy_and_policy"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/alertMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/terms"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            android:text="@string/decline"
            android:backgroundTint="#BA1616"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            android:textSize="15sp"
            android:layout_marginEnd="20dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:backgroundTint="#0E5B99"
                app:cornerRadius="10dp"
                android:text="@string/accept"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp"
                android:textSize="15sp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>