<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#7F4FC3F7"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="20dp"
        app:cardElevation="0dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            android:gravity="center"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#04558E"/>

            <EditText
                android:id="@+id/eUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/enter_user"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/enter_password"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#8E5828"
                android:textSize="25sp"
                android:backgroundTint="#E9B18A"
                app:cornerRadius="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>